Added pages with neon animations

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
         <link rel="import" href="bower_components/iron-ajax/iron-ajax.html">
-        <link rel="import" href="src/polymer-learning-resources-app.html">
+        <!--<link rel="import" href="src/polymer-learning-resources-app.html">-->
         <link rel="import" href="src/test-app.html">
 
         <style>
@@ -32,7 +32,7 @@
             <iron-ajax url="data/items.json" auto last-response="{{items}}"></iron-ajax>
             <iron-ajax url="data/featured.json" auto last-response="{{featuredItems}}"></iron-ajax>
             <!--<polymer-learning-resources-app items="[[items]]" featured-items="[[featuredItems]]"></polymer-learning-resources-app>-->
-            <test-app items="[[items]]" featured-items="[[featuredItems]]"></test-app>
+            <test-app></test-app>
 
         </template>
 
