--- a/src/test-app.html
+++ b/src/test-app.html
@@ -9,8 +9,11 @@
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/app-layout/app-layout.html">
 <link rel="import" href="../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
-<link rel="import" href="resource-list.html">
-<link rel="import" href="resource-detail.html">
+<link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html">
+<link rel="import" href="home-view.html">
+<link rel="import" href="resources-view.html">
+<link rel="import" href="about-view.html">
+
 
 <dom-module id="test-app">
     <template>
@@ -104,7 +107,7 @@
                 --paper-tab-ink: #31f0ef;
             }
 
-            paper-tab a {
+            paper-tab span {
                 @apply(--layout-horizontal);
                 @apply(--layout-center-center);
                 text-decoration: none;
@@ -188,17 +191,19 @@
 
         </style>
 
-        <app-location route="{{route}}" use-hash-as-path></app-location>
+        <app-location route="{{route}}"></app-location>
         <app-route
                 route="{{route}}"
-                pattern=":section"
-                data="{{sectionData}}"
-                tail="{{subRoute}}"></app-route>
+                pattern="/:view"
+                data="{{routeData}}"
+                tail="{{subRoute}}">
+        </app-route>
         <app-route
                 route="{{subRoute}}"
                 pattern="/:id"
                 data="{{idData}}"
-                active="{{onDetailPage}}"></app-route>
+                active="{{onDetailPage}}">
+        </app-route>
 
         <iron-media-query query="max-width: 400px" query-matches="{{smallScreen}}"></iron-media-query>
 
@@ -206,62 +211,34 @@
             <app-header id="header" effects="waterfall" fixed shadow condenses="[[!smallScreen]]">
                 <app-toolbar id="mainToolbar">
                     <div class="navItem leftItem">
-                        <a href="#[[sectionData.section]]" tabindex="-1">
-                            <paper-icon-button icon="arrow-back" alt="Back to the home"></paper-icon-button>
-                        </a>
+                        <!--<a href="#[[sectionData.section]]" tabindex="-1">-->
+                        <!--<paper-icon-button icon="arrow-back" alt="Back to the home"></paper-icon-button>-->
+                        <!--</a>-->
                     </div>
                     <div class="spacer">
                         <img src="//app-layout-assets.appspot.com/assets/shrine/shrine_logo.svg" class="logo"
                              alt="SHRINE">
                     </div>
-                    <div class="navItem">
-                        <paper-icon-button icon="shopping-cart" aria-label="Shopping cart"></paper-icon-button>
-                        <paper-icon-button icon="more-vert" aria-label="More options"></paper-icon-button>
-                    </div>
                 </app-toolbar>
-                <template is="dom-if" if="[[_shouldShowTabs(onDetailPage, smallScreen)]]">
-                    <paper-tabs selected="[[selectedTab]]" scrollable
-                                sticky$="[[_shouldShowTabs(onDetailPage, smallScreen)]]">
-                        <template is="dom-repeat" items="[[sections]]" as="section">
-                            <paper-tab>
-                                <a href="#[[section]]">[[section]]</a>
-                            </paper-tab>
-                        </template>
-                    </paper-tabs>
-                </template>
+
+                <paper-tabs selected="{{routeData.view}}" attr-for-selected="name" scrollable sticky$>
+                    <paper-tab name="">
+                        <span>home</span>
+                    </paper-tab>
+                    <paper-tab name="resources">
+                        <span>resources</span>
+                    </paper-tab>
+                    <paper-tab name="about">
+                        <span>about</span>
+                    </paper-tab>
+                </paper-tabs>
             </app-header>
 
-            <app-drawer-layout drawer-width="288px">
-                <template is="dom-if" if="[[_equal(route.path, 'official')]]">
-                    <app-drawer id="drawer" swipe-open>
-                        <div class="list">
-                            <template is="dom-repeat" items="[[sections]]" as="section" initial-count="1">
-                                <a href="#[[section]]" class$="[[_getSectionClass(index, selectedTab)]]">[[section]]</a>
-                            </template>
-                        </div>
-                    </app-drawer>
-                </template>
-                <iron-pages selected="[[page]]" attr-for-selected="name">
-                    <!-- detail of item -->
-                    <template is="dom-if" if="[[_equal(page, 'detail')]]">
-                        <resource-detail
-                                name="detail"
-                                section="[[sectionData.section]]"
-                                related-items="[[items]]"
-                                item="[[_getDetailItem(items, idData.id)]]">
-                        </resource-detail>
-                    </template>
-                    <!-- list of items -->
-                    <template is="dom-if" if="[[_equal(page, 'list')]]">
-                        <resource-list
-                                name="list"
-                                section="[[sectionData.section]]"
-                                items="[[_getItemsCopy(items, sectionData.section)]]"
-                                featured-item="[[_getFeaturedItem(featuredItems, sectionData.section)]]">
-                        </resource-list>
-                    </template>
-                </iron-pages>
-            </app-drawer-layout>
+            <neon-animated-pages selected="{{routeData.view}}" attr-for-selected="name">
+                <home-view name=""></home-view>
+                <resources-view name="resources"></resources-view>
+                <about-view name="about"></about-view>
+            </neon-animated-pages>
         </app-header-layout>
 
     </template>
@@ -270,107 +247,22 @@
 
             is: 'test-app',
             properties: {
-
-                sections: {
-                    type: Array,
-                    value: function () {
-                        return [
-                            'official',
-                            'courses',
-                            'books',
-                            'articles',
-                            'tutorials',
-                            'food',
-                            'travel'
-                        ];
-                    }
-                },
-
-                selectedTab: {
-                    type: Number,
-                    computed: '_computeSelectedTab(sections, sectionData.section)'
-                },
-
-                items: {
-                    type: Array
-                },
-
-                featuredItems: {
-                    type: Array
-                },
-
-                page: {
-                    type: String,
-                    computed: '_computePage(onDetailPage)',
-                    reflectToAttribute: true
-                },
-
                 route: Object,
-
                 subRoute: Object,
-
-                sectionData: Object,
-
-                idData: Object,
-
-                onDetailPage: Boolean
+                routeData: Object
             },
-
-            observers: [
-                '_hashDidChange(route.path, items, featuredItems)'
-            ],
 
             ready: function () {
                 this.async(function () {
                     if (!this.route.path) {
-                        this.set('route.path', 'official');
+                        this.set('route.path', 'home');
                     }
                 });
             },
 
-            _computeSelectedTab: function (sections, section) {
-                return sections.indexOf(section);
-            },
-
-            _getItemsCopy: function (items) {
-                return items.slice();
-            },
-
-            _getFeaturedItem: function (featuredItems, section) {
-                return featuredItems.filter(function (item) {
-                    return item.category.toLowerCase() === section;
-                }).pop();
-            },
-
-            _getDetailItem: function (items, id) {
-                return items[id];
-            },
-
-            _computePage: function (onDetailPage) {
-                return onDetailPage ? 'detail' : 'list';
-            },
-
-            _hashDidChange: function () {
-                // TODO(blasten) Polymer.AppScrollEffects(0);
-                this.$.header._scrollTop = 0;
-                this.$.header.resetLayout();
-                if (this.smallScreen) {
-                    this.$.drawer.close();
-                }
-            },
-
             _equal: function (a, b) {
                 return a === b;
-            },
-
-            _getSectionClass: function (index, selectedTab) {
-                return index === selectedTab ? 'active' : '';
-            },
-
-            _shouldShowTabs: function (onDetailPage, smallScreen) {
-                return true; //!onDetailPage && !smallScreen;
             }
-
         });
     </script>
 </dom-module>
