Added learning resources

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
-        <link rel="import" href="bower_components/iron-ajax/iron-ajax.html">
+        <!--<link rel="import" href="bower_components/iron-ajax/iron-ajax.html">-->
         <!--<link rel="import" href="src/polymer-learning-resources-app.html">-->
         <link rel="import" href="src/test-app.html">
 
@@ -27,14 +27,14 @@
     </head>
     <body unresolved>
 
-        <template is="dom-bind">
+        <!--<template is="dom-bind">-->
 
-            <iron-ajax url="data/items.json" auto last-response="{{items}}"></iron-ajax>
-            <iron-ajax url="data/featured.json" auto last-response="{{featuredItems}}"></iron-ajax>
+            <!--<iron-ajax url="data/items.json" auto last-response="{{items}}"></iron-ajax>-->
+            <!--<iron-ajax url="data/featured.json" auto last-response="{{featuredItems}}"></iron-ajax>-->
             <!--<polymer-learning-resources-app items="[[items]]" featured-items="[[featuredItems]]"></polymer-learning-resources-app>-->
             <test-app></test-app>
 
-        </template>
+        <!--</template>-->
 
     </body>
 </html>
