--- a/src/about-view.html
+++ b/src/about-view.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animatable-behavior.html">
-<link rel="import" href="../bower_components/neon-animation/animations/slide-from-right-animation.html">
-<link rel="import" href="../bower_components/neon-animation/animations/slide-left-animation.html">
+<link rel="import" href="../bower_components/neon-animation/animations/fade-in-animation.html">
+<link rel="import" href="../bower_components/neon-animation/animations/fade-out-animation.html">
 
 <dom-module id="about-view">
 
@@ -28,11 +28,11 @@
                         return {
                             'entry': {
                                 node: this,
-                                name: 'slide-from-right-animation'
+                                name: 'fade-in-animation'
                             },
                             'exit': {
                                 node: this,
-                                name: 'slide-left-animation'
+                                name: 'fade-out-animation'
                             }
                         };
                     }
